# tina4

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh  tina4-darwin-arm64  tina4-linux-amd64
.github/workflows/: ci.yml  release.yml
homebrew/: tina4.rb
scripts/: build-local.bat  sign-windows.ps1
src/: agent.rs  console.rs  detect.rs  doctor.rs  env_config.rs  generate.rs  init.rs  install.rs  main.rs  rag.rs  scss.rs  session.rs  upgrade.rs  watcher.rs
tests/: session_smoke.rs
