[package]
name = "tina4"
version = "3.8.19"
edition = "2021"
description = "Tina4 — Unified CLI for Python, PHP, Ruby, and Node.js frameworks"
license = "MIT"
repository = "https://github.com/tina4stack/tina4"
homepage = "https://tina4.com"
keywords = ["cli", "web-framework", "scss", "dev-tools"]
categories = ["command-line-utilities", "development-tools", "web-programming"]

[[bin]]
name = "tina4"
path = "src/main.rs"

[dependencies]
grass = { version = "0.13", default-features = false }
notify = "7"
clap = { version = "4", features = ["derive"] }
colored = "2"
which = "7"
ctrlc = "3"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
